[package]
name = "loady_mc_loadface"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = { version = "0.3.31", features = ["thread-pool"] }
threadpool = "1.8.1"
num_cpus = "1.17.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.4"

[profile.release]
opt-level = 3
strip = true
debug = false
codegen-units = 1
lto = true
